--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.0",
+    "css-loader": "^3.2.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.16.0",
     "gatsby-image": "^2.2.28",
     "gatsby-plugin-manifest": "^2.2.22",
     "gatsby-plugin-offline": "^3.0.15",
     "gatsby-plugin-react-helmet": "^3.1.12",
+    "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.30",
     "gatsby-source-filesystem": "^2.1.32",
+    "gatsby-source-graphql": "^2.1.20",
+    "gatsby-source-strapi": "^0.0.10",
     "gatsby-transformer-sharp": "^2.2.22",
+    "node-sass": "^4.12.0",
+    "node-sass-glob-importer": "^5.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "spectre.css": "^0.5.8"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
