--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "node-sass": "^4.12.0",
     "node-sass-glob-importer": "^5.3.2",
     "prop-types": "^15.7.2",
+    "ramda": "^0.26.1",
     "react": "^16.10.2",
+    "react-compound-slider": "^2.3.0",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "spectre.css": "^0.5.8"
